# cs9315-ass2

./: CMakeLists.txt  bits.c  bits.h  bsig.c  psig.c  psig.h  query.c  query.h  reln.c  reln.h  setup.sh  tsig.c  x1.c  x2.c
